--- a/views/login.haml
+++ b/views/login.haml
@@ -7,7 +7,7 @@
           %input{:type => "password", :name=>"pass"}
           %hr
           - $users.each do |user|
-            %input.radio-inline{:type=>"radio", :name=>"user", :value=>user} 
+            %input.checkbox-inline{:type=>"checkbox", :name=>"user", :value=>user} 
               = user
           %hr
-          %input.radio{:type=>"submit", :value=>"OK"}
+          %input.btn{:type=>"submit", :value=>"OK"}
