--- a/views/overview.haml
+++ b/views/overview.haml
@@ -2,41 +2,77 @@
   %strong Favoriten
   - @top.each do |fav|
     %p= fav
+
 %hr
+:javascript
+  var all = [];
+
 - @records.each_with_index do |record, idx|
   #div.well.well-sm{:id=>"#{record.gsub(/\.mp3|\.wav/,"")}"}
     %h3{:style=>"display:block;"}
       = record.gsub(/\.mp3|\.wav/,"")
-    %audio{:id=>"player#{idx}", controls: true, preload: false}
-      %source{:src=>"#{record}", :type=>(record =~ /wav$/ ? "audio/wav" : "audio/mpeg")}
+    %button.btn.btn-default{:id=>"load#{idx}", :onclick=>"wavesurfer#{idx}.load('#{record}')"}
+      %progress.progress{:id=>"progress#{idx}", :max=>"100", :value=>"0"}
+      %p LOAD
     :javascript
-      var audio#{idx} = document.getElementById("player#{idx}");
-      audio#{idx}.addEventListener("playing", function() {
-        $.each($('audio'), function(){
-          if(this !== audio#{idx}){
-            this.pause()
+      var wavesurfer#{idx} = WaveSurfer.create({
+          container: "#div_#{record.gsub(/\.mp3|\.wav/,"")}",
+          backend: 'MediaElement',
+          progressColor: 'hsla(200, 100%, 30%, 0.5)',
+          cursorColor: '#fff',
+          normalize: true,
+          barWidth: '3',
+          pixelRatio: '1'
+      });
+      all.push(wavesurfer#{idx});
+      wavesurfer#{idx}.on('loading', function (percents) {
+        document.getElementById('progress#{idx}').value = percents;
+        if (percents === 100) {
+          document.getElementById('progress#{idx}').style.display = 'none';
+          document.getElementById('load#{idx}').style.display = 'none';
+        }
+      });
+      wavesurfer#{idx}.on('ready', function (percents) {
+        wavesurfer#{idx}.play()
+      });
+      
+      wavesurfer#{idx}.on("loading", function() {
+        $.each(all, function(index, value){
+          if(value !== wavesurfer#{idx}){
+            value.pause()
           }
         })
       })
-      audio#{idx}.addEventListener("ended", function() {
-        audio#{idx+1}.play();
-        document.getElementById("player#{idx+1}").focus();
+      
+      wavesurfer#{idx}.on("play", function() {
+        $.each(all, function(index, value){
+          if(value !== wavesurfer#{idx}){
+            value.pause()
+          }
+        })
       })
-
-    = haml :edit, :locals => {:record => "#{record}", :idx => idx}
-    %div.row
+      wavesurfer#{idx}.on("finish", function() {
+        wavesurfer#{idx+1}.load('#{@records[idx+1]}');
+        wavesurfer#{idx+1}.playPause();
+        //document.getElementById("wavesurfer#{idx+1}").focus();
+      })
+    
+    %div.btn-group
+      // controls
+      %button.btn.btn-default{:onclick=>"wavesurfer#{idx}.play();wavesurfer#{idx}.load('#{record}')"}
+        %i.glyphicon.glyphicon-play
+      %button.btn.btn-default{:onclick=>"wavesurfer#{idx}.pause();"}
+        %i.glyphicon.glyphicon-pause
+      %a.btn.btn-default{ :href=>"#{to("/download/#{record}")}", :style=>"text-decoration:none;"}
+        %i.glyphicon.glyphicon-save
+      %a.btn.btn-default{ :href=>"#{to("/delete/#{record}")}", :style=>"text-decoration:none;"}
+        %i.glyphicon.glyphicon-trash
+      // favorites
       - recordname = record.gsub(/\.mp3|\.wav/, "")
+    %div.btn-group
       %form.form-inline{:action => "/update/favs/#{session[:user]}", :method => "post"}
-        %div.form-group
-          - $users.each do |user|
-            - favs = userfile(user)
-            %div.col-sm-2
-              %button.btn.form-control{:type=>"submit", :name => "fav"+user.capitalize, :value => recordname, :class => [("disabled" if session[:user] != user), (favs.join(" ") =~ /\b(#{recordname})\b/ ? "btn-warning" : "btn-primary")], :style=>"margin-top:10px;"} 
-                = user
-      #delete.col-sm-1.btn.btn-default{:style=>"display:inline;margin:1em;"}
-        %a{ :href=>"#{to("/delete/#{record}")}", :style=>"text-decoration:none;"}
-          delete
-      #download.col-sm-1.btn.btn-default{:style=>"display:inline;text-decoration:none;margin:1em;"}
-        %a{ :href=>"#{to("/download/#{record}")}", :style=>"text-decoration:none;"}
-          download
-  %hr
+        - $users.each do |user|
+          - favs = userfile(user)
+          %button.btn.btn-default.glyphicon{:type=>"submit", :name => "fav"+user.capitalize, :value => recordname, :class => [("disabled" if session[:user] != user), (favs.join(" ") =~ /\b(#{recordname})\b/ ? "btn-warning" : "btn-primary"), (favs.join(" ") =~ /\b(#{recordname})\b/ ? "glyphicon-ok" : "glyphicon-ok-sign")], :style=>"margin-left:-5px;"}
+            = user
+    = haml :edit, :locals => {:record => "#{record}", :idx => idx}
