added user favs list

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 .container-fluid {
   font-family: monospace;
 }
-.glyphicon {
+/*.glyphicon {
     font-size: 16px;
-} 
+} */
 .white, .white a {
   color: #fff;
 }
