--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,6 +8,7 @@
     %script{:src=>"/js/jquery-1.11.2.min.js", :type=>"text/javascript"}
     %script{:src=>"/js/bootstrap.min.js", :type=>"text/javascript"}
     %script{:src=>"/js/wavesurfer.min.js", :type=>"text/javascript"}
+    %script{:src=>"/js/wavesurfer.timeline.min.js", :type=>"text/javascript"}
     %link{:href=>"/css/bootstrap.min.css", :rel=>"stylesheet"}
     %link{:href=>"/css/offcanvas.css", :rel=>"stylesheet"}
     %link{:href=>"/css/style.css", :rel=>"stylesheet"}
