--- a/views/links.haml
+++ b/views/links.haml
@@ -1,4 +1,10 @@
 %div.well
+  %ul{:style=>"list-style-type: none;padding:0;"}
+    %li
+      %a{:href=>to("/rss.xml"), :rel=>"alternate", :type=>"application/rss+xml"}
+        %button.btn.btn-default
+          rss feed
+  %hr
   %form{:name => "form", :action => to('/links'), :method => "post", :enctype => "multipart/form-data" }
     %input{:type=>"text", :name=>"comment", :placeholder=>"link:", :size=>"80", :style=>"margin:10px 0px 10px 0px;" }
     %br
